--- a/styles/app.css
+++ b/styles/app.css
@@ -105,7 +105,6 @@ button {
   cursor: pointer;
   position: relative;
 }
-
 .movie-container--loading {
   background: var(--purple-light-2);
   border-radius: 8px;
@@ -113,7 +112,7 @@ button {
   min-height: 225px;
   max-height: 225px;
   width: 150px;
-  min-width: 15px;
+  min-width: 150px;
   max-width: 150px;
   margin-bottom: 15px;
   animation: loading-skeleton infinite 1.5s;
@@ -152,13 +151,28 @@ button {
   content: '💜';
 }
 
-
 .categoriesPreview-list, .categories-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
   flex-wrap: wrap;
+}
+
+.category-container--loading {
+  background: var(--purple-light-2);
+  border-radius: 8px;
+  height: 25px;
+  min-height: 25px;
+  max-height: 25px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 1.5s;
+}
+.category-container--loading:nth-child(2) {
+  animation-delay: .2s;
 }
 
 
@@ -372,11 +386,21 @@ button {
   white-space: nowrap;
   width: calc(100vw - 24px);
   padding-bottom: 16px;
+  max-height: 225px;
 }
 
 .relatedMovies-scrollContainer .movie-container {
   display: inline-block;
   margin-right: 8px;
+}
+
+.relatedMovies-scrollContainer .movie-container--loading {
+  width: 125px;
+  min-width: 125px;
+  max-width: 125px;
+  height: 187.5px;
+  min-height: 187.5px;
+  max-height: 187.5px;
 }
 
 .relatedMovies-scrollContainer .movie-img {
@@ -406,9 +430,10 @@ footer {
   display: none;
 }
 
-/* Animations*/
+
+/* Animations */
 @keyframes loading-skeleton {
-  0%, 10% {
+  0%, 100% {
     opacity: 100%;
   }
   50% {
